[BE] fix: 챌린지 DTO 수정